# ha-dangbei

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hacs.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: validate.yml
custom_components/dangbei/: __init__.py  binary_sensor.py  button.py  client.py  config_flow.py  const.py  coordinators.py  device_info.py  manifest.json  remote.py  wake_profiles.py
custom_components/dangbei/translations/: en.json  zh-Hans.json
esp32-dangbei-wol/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32-dangbei-wol/main/: CMakeLists.txt  app_ble_wakeup.c  app_ble_wakeup.h  app_captive_dns.c  app_captive_dns.h  app_http.c  app_http.h  app_mdns.c  app_mdns.h  app_provision.c  app_provision.h  app_status.c  app_status.h  app_wake_profile.c  app_wake_profile.h  app_wifi.c  app_wifi.h  idf_component.yml  main.c
